--- a/src/style.css
+++ b/src/style.css
@@ -315,6 +315,9 @@ h2 {
   background-repeat: no-repeat;
   background-image: url(../images/desktop/back2.png);
 }
+.wrapper__text-guest {
+  margin-left: 180px;
+}
 
 .conference {
   background-size: contain;
