--- a/src/style.css
+++ b/src/style.css
@@ -651,8 +651,12 @@ img {
     align-items: center;
   }
   .footer {
+    padding: 60px 45px;
     text-align: center;
     font-size: 12px;
+  }
+  .footer__cocial-list {
+    justify-content: center;
   }
 }
 
