--- a/src/style.css
+++ b/src/style.css
@@ -83,7 +83,6 @@ h5 {
 }
 img {
   border-radius: 10px;
-  height: 100%;
   object-fit: contain;
 }
 
@@ -533,6 +532,43 @@ img {
 .alreadyContributors__listtwo li {
   list-style-image: url("../images/list.svg");
   margin-left: 12px;
+}
+@media only screen and (max-width: 769px) {
+  .alreadyContributors {
+    background-image: none;
+  }
+  .slider {
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+    position: relative;
+  }
+
+  .slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+  }
+  .slide.active {
+    opacity: 1;
+  }
+
+  .slide.previous {
+    transform: translateX(-100%);
+  }
+
+  .slide.next {
+    transform: translateX(100%);
+  }
+
+  .slide.previous.active,
+  .slide.next.active {
+    opacity: 1;
+  }
 }
 
 /* becomeCDEV */
