--- a/src/style.css
+++ b/src/style.css
@@ -148,7 +148,7 @@ img {
 
 .container {
   max-width: 1320px;
-  width: 100%;
+  /* width: 100%; */
   padding: 0 10px;
 }
 @media only screen and (max-width: 768px) {
@@ -203,6 +203,12 @@ img {
 /*----------*/
 
 /* header */
+.header_wrapper {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  background-color: #fff;
+}
 .header {
   display: grid;
   grid-template-columns: 14% 58% 14%;
@@ -303,6 +309,7 @@ img {
   height: calc(100vh - 90px);
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  margin-top: 82px;
   align-items: center;
 }
 
@@ -650,7 +657,6 @@ img {
 
 /* footer */
 .footer {
-  margin: 0px auto;
   padding: 33px 101px;
   background: var(--secondary-background-color);
   color: var(--secondary-text-color);
@@ -823,4 +829,78 @@ img {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.section__thanks {
+  width: 100vw;
+  margin: 0px auto;
+}
+.thanks {
+  background-size: 100%;
+  background-position: 100%;
+  background-repeat: no-repeat;
+  background-image: url(../images/mask.png);
+  margin-bottom: 30px;
+  margin-top: 89px;
+  padding: 100px 295px 120px 295px;
+}
+.thanks h2 {
+  font-size: 52px;
+  margin-bottom: 80px;
+}
+.thanks h3 {
+  font-size: 24px;
+  margin-bottom: 46px;
+}
+.thanks h3 > span {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 170%;
+}
+
+.thanks p {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 170%;
+  text-align: center;
+}
+
+.footer_thanks {
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+  margin: 0px auto;
+}
+
+@media only screen and (max-width: 768px) {
+  .thanks {
+    margin-top: 89px;
+    padding: 32px 56px;
+  }
+  .thanks h2 {
+    font-size: 40px;
+    margin-bottom: 72px;
+  }
+  .thanks h3 {
+    font-size: 20px;
+    margin-bottom: 40px;
+  }
+  .thanks h3 > span {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 170%;
+  }
+
+  .thanks p {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 170%;
+    text-align: center;
+  }
+  .footer_thanks {
+    position: static;
+    bottom: 0;
+    width: 100vw;
+    margin: 0px auto;
+  }
 }
